[tool.poetry]
name = "sunshine"
version = "0.1.0"
description = "Mapping sunshine in Europe"
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
plotly = "^5.8.0"
jupyter = "^1.0.0"
lxml = "^4.8.0"
requests = "^2.27.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
